tests/miniJava/neg/005254_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] 0 java ( ) { return 0 ; } }
